--- a/_docs/component-ListView.html
+++ b/_docs/component-ListView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tdoc 组件</title>
+    <title>Edoc 组件</title>
     <link rel="stylesheet" href="source/app.css"/>
     <link rel="stylesheet" href="source/highlight.min.css">
 </head>
